# hajimi-king-pro

./: .gitignore  README.md  docker-compose.yml  env.example  first_deploy.sh  pyproject.toml
.github/workflows/: docker-image.yml
app/: hajimi_king.py
common/: Logger.py  config.py  state.py  translations.py
utils/: db_manager.py  file_manager.py  github_client.py  migration.py  sync_utils.py  sync_utils_updated.py
