[project]
name = "hajimi-king-Pro"
version = "0.0.1-beta"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
]
